# N-puzzle

./: CMakeLists.txt  TreeNode.cpp  TreeNode.h  astar.cpp  heuristic.cpp  main.cpp  main.h  treeUtils.cpp  utils.cpp
inputfiles/: 3input.txt  44444_input.txt  4444_input.txt  444input.txt  44_input.txt  44input.txt  4_input.txt  4input.txt  solvable3-1.txt  solvable3-2.txt  solvable3-3.txt  solvable3-4.txt  solvable4-1.txt  solvable4-2.txt  solvable4-3.txt  test1_input.txt  test2_input.txt
