project(foo)
include(CheckCXXCompilerFlag)
set("BOOST_ROOT" "~/.brew/Cellar/boost/1.63.0")
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -fsanitize=address")
endif()
cmake_minimum_required(VERSION 3.4)
find_package( Boost COMPONENTS  program_options REQUIRED ) #thread system filesystem
if(Boost_FOUND)
	set(Boost_USE_STATIC_LIBS ON)
	include_directories(${Boost_INCLUDE_DIRS})
	    add_executable(foo main.cpp TreeNode.cpp TreeNode.h utils.cpp astar.cpp treeUtils.cpp heuristic.cpp)
		target_link_libraries(foo ${Boost_LIBRARIES})
	endif()
